Bugfix: currency dropdown was being cut off at the bottom of the dialog element

--- a/styles.css
+++ b/styles.css
@@ -61,10 +61,14 @@ dialog {
     padding: 28px;
     border-radius: 20px;
     border: none;
-    position: absolute;
+    position: relative;
     left: 50%;
     top: 50%;
     translate: -50% -50%;
+}
+
+.add-items-dialog {
+    overflow: visible;
 }
 
 .add-items-dialog,
